Add missing bits to make user dialogs work

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -15,7 +15,7 @@
 
 <!-- Paper elements -->
 <link rel="import" href="../bc/paper-button/paper-button.html">
-<!--<link rel="import" href="../bc/paper-dialog-scrollable/paper-dialog-scrollable.html">-->
+<link rel="import" href="../bc/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../bc/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bc/paper-fab/paper-fab.html">
@@ -41,9 +41,12 @@
 <link rel="import" href="../styles/global-styles.html">
 
 <link rel="import" href="global-behavior.html">
+<link rel="import" href="form-behavior.html">
 
+<link rel="import" href="responsive-dialog.html">
 <link rel="import" href="item-collection.html">
 <link rel="import" href="user-display.html">
+<link rel="import" href="user-form.html">
 <link rel="import" href="recipe-display.html">
 <link rel="import" href="recipe-details.html">
 
