--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -17,7 +17,7 @@
         --light-primary-color: #C5CAE9;
         --text-primary-color: #ffffff; /*text/icons*/
         --accent-color: #FF4081;
-        --primary-background-color: #c5cae9;
+        --primary-background-color: white;
         --primary-text-color: #212121;
         --secondary-text-color: #727272;
         --disabled-text-color: #bdbdbd;
@@ -57,7 +57,7 @@
         width: calc(98.66% - 16px);
         margin: 16px auto;
             /* change this back to white once I see it working */
-        background: green;
+        background-color: green;
     }
 
     paper-menu iron-icon {
