Add toast notifications, fix posting users

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -3,14 +3,10 @@
 <!--<link rel="import" href="../bc/iron-flex-layout/classes/iron-flex-layout.html">-->
 <link rel="import" href="../bc/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bc/iron-collapse/iron-collapse.html">
-<!--<link rel="import" href="../bc/iron-icons/communication-icons.html">-->
-<!--<link rel="import" href="../bc/iron-icons/device-icons.html">-->
 <link rel="import" href="../bc/iron-icons/iron-icons.html">
-<!--<link rel="import" href="../bc/iron-icons/maps-icons.html">-->
 <link rel="import" href="../bc/iron-icons/social-icons.html">
-<!--<link rel="import" href="../bc/iron-list/iron-list.html">-->
 <link rel="import" href="../bc/iron-pages/iron-pages.html">
-<!--<link rel="import" href="../bc/iron-selector/iron-selector.html">-->
+<link rel="import" href="../bc/iron-signals/iron-signals.html">
 
 
 <!-- Paper elements -->
@@ -43,6 +39,7 @@
 <link rel="import" href="global-behavior.html">
 <link rel="import" href="form-behavior.html">
 
+<link rel="import" href="recipe-notifications.html">
 <link rel="import" href="responsive-dialog.html">
 <link rel="import" href="item-collection.html">
 <link rel="import" href="user-display.html">
