--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
             </iron-pages>
         </div>
         <br />
+        <recipe-notifications></recipe-notifications>
     </template>
 
     <script src="/js/app.js"></script>
