Add username display and login/logout buttons in UI

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -48,6 +48,6 @@
 <link rel="import" href="recipe-details.html">
 <link rel="import" href="recipe-form.html">
 
-<!--<link rel="import" href="cookie-display.html">-->
+<link rel="import" href="cookie-display.html">
 
 
