--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -20,6 +20,10 @@
                 --iron-icon-fill-color: gray;
             }
 
+            a.inherit-color {
+                color:              inherit;
+                text-decoration:    none;
+            }
             paper-fab {
                 position:   fixed;
                 bottom:     1em;
