Add drawer panel back to the main page
- Move login/logout buttons there
- Also make auth cookie HttpOnly

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -5,27 +5,27 @@
     // We use Page.js for routing. This is a Micro
     // client-side router inspired by the Express router
     // More info: https://visionmedia.github.io/page.js/
-    page('/', function () {
+    page('*', function(ctx, next) {
+        app.closeDrawer();
+        next();
+    });
+    page('/', function() {
       app.route = 'recipes';
-      //app.scrollPageToTop();
     });
 
-    page('/users', function () {
+    page('/users', function() {
       app.route = 'users';
-      //app.scrollPageToTop();
     });
 
-    console.log('asdasdasd');
-    page('/recipes/:id', function (data) {
+    page('/recipes/:id', function(data) {
         console.log('loading recipe-details');
       app.route = 'recipe-details';
       app.params = data.params;
-      //app.scrollPageToTop();
     });
 
     // add #! before urls
     page({
-      hashbang: true
+        hashbang: true
     });
 
   });
