--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../bc/iron-collapse/iron-collapse.html">
 <link rel="import" href="../bc/iron-icons/iron-icons.html">
 <link rel="import" href="../bc/iron-icons/social-icons.html">
+<link rel="import" href="../bc/iron-icons/maps-icons.html">
 <link rel="import" href="../bc/iron-pages/iron-pages.html">
 <link rel="import" href="../bc/iron-signals/iron-signals.html">
 
@@ -16,6 +17,7 @@
 <link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bc/paper-fab/paper-fab.html">
 <link rel="import" href="../bc/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../bc/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bc/paper-input/paper-textarea.html">
 <link rel="import" href="../bc/paper-item/paper-item.html">
