Convert roles to use starting cap: s/admin/Admin/

--- a/app/elements/global-behavior.html
+++ b/app/elements/global-behavior.html
@@ -7,10 +7,10 @@
 var constants = {};
 
 constants.user_role_enum = {
-    admin:      'admin',
-    moderator:  'moderator',
-    user:       'user',
-    guest:      'guest',
+    admin:      'Admin',
+    moderator:  'Moderator',
+    user:       'User',
+    guest:      'Guest',
 };
 
 // Take an dictionary, return an array of values. This is defined outside the
