--- a/app/index.html
+++ b/app/index.html
@@ -163,7 +163,7 @@
     var app = document.querySelector('#app');
 
     app.user_is_admin = function(role) {
-        return role === 'admin';
+        return role === 'Admin';
     };
 
   </script>
