--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -16,22 +16,33 @@
         </style>
 
         <!-- AJAX requests. -->
-        <iron-ajax auto
+        <iron-ajax auto="[[recipeId]]"
                 method="GET"
                 url="/recipes/[[recipeId]]"
                 handle-as="json"
                 last-response="{{recipe}}"
-                on-error="loadingRecipeFailed"
-                on-response="recipeReceived"
-                loading="{{loading.getRecipe}}">
+                on-error="loading_recipe_failed"
+                on-response="recipe_received"
+                loading="{{loading.get_recipe}}">
+        </iron-ajax>
+        <iron-ajax method="PUT"
+                id="put_item_ajax"
+                url="/recipes/[[recipeId]]"
+                body="[[recipe]]"
+                content-type="application/json"
+                handle-as="json"
+                last-response="{{new_recipe}}"
+                on-response="put_item_successful"
+                on-error="put_item_failed"
+                loading="{{loading.put_item}}">
         </iron-ajax>
 
         <div class="headerbar layout horizontal center">
-            <paper-button raised on-tap="loadRecipesPage">
+            <paper-button raised on-tap="load_recipes_page">
                 <iron-icon icon="icons:arrow-back"></iron-icon>
                 All Recipes
             </paper-button>
-            <paper-button raised on-tap="toggleEditMode">
+            <paper-button raised on-tap="toggle_edit_mode">
                 <iron-icon icon="icons:create"></iron-icon>
                 <template is="dom-if" if="[[editMode]]">
                     Leave
@@ -69,24 +80,24 @@
                             <template is="dom-repeat"
                                     items="{{recipe.ingredients}}" as="i">
                                 <paper-input type="text"
-                                        label="Item [[addOne(index)]]"
+                                        label="Item [[add_one(index)]]"
                                         value="{{i}}">
                                     <paper-icon-button suffix
                                             icon="icons:cancel"
                                             data-index$="[[index]]"
-                                            on-tap="deleteIngredient">
+                                            on-tap="delete_ingredient">
                                     </paper-icon-button>
                                     <paper-icon-button suffix
                                             icon="icons:arrow-upward"
                                             data-index$="[[index]]"
                                             disabled$="[[!index]]"
-                                            on-tap="moveIngredientUp">
+                                            on-tap="move_ingredient_up">
                                     </paper-icon-button>
                                 </paper-input>
                             </template>
 
                             <div class="layout horizontal center-justified">
-                                <paper-button on-tap="addIngredient">
+                                <paper-button on-tap="add_ingredient">
                                     <iron-icon icon="icons:add-circle">
                                     </iron-icon>
                                     Add item
@@ -102,27 +113,27 @@
                             <template is="dom-repeat"
                                     items="{{recipe.directions}}" as="d">
                                 <paper-textarea type="text"
-                                        label="Step [[addOne(index)]]"
+                                        label="Step [[add_one(index)]]"
                                         value="{{d}}">
                                 </paper-textarea>
                                 <div class="layout horizontal end-justified">
                                     <paper-button
                                             data-index$="[[index]]"
-                                            on-tap="deleteDirection">
+                                            on-tap="delete_direction">
                                         <iron-icon icon="icons:cancel">
                                         </iron-icon>
-                                        Remove Step [[addOne(index)]]
+                                        Remove Step [[add_one(index)]]
                                     </paper-button>
                                     <paper-icon-button
                                             icon="icons:arrow-upward"
                                             data-index$="[[index]]"
                                             disabled$="[[!index]]"
-                                            on-tap="moveDirectionUp">
+                                            on-tap="move_direction_up">
                                     </paper-icon-button>
                                 </div>
                             </template>
                             <div class="layout horizontal center-justified">
-                                <paper-button on-tap="addDirection">
+                                <paper-button on-tap="add_direction">
                                     <iron-icon icon="icons:add-circle">
                                     </iron-icon>
                                     Add item
@@ -161,7 +172,7 @@
                         <!--<div class="layout horizontal end-justified">-->
                             <span class="flex"></span>
                             <span class="recipe-tags">
-                                [[formatRecipeTags(recipe.tags)]]
+                                [[format_recipe_tags(recipe.tags)]]
                             </span>
                         <!--</div>-->
                     </div>
@@ -229,6 +240,16 @@
                 </template>
             </div>
         </paper-material>
+
+        <paper-toast id="save_toast"
+                class="warn-toast"
+                duration="0"
+                horizontal-align="right"
+                horizontal-offset="20"
+                no-cancel-on-esc-key
+                on-click="save_recipe"
+                text="You have unsaved changes. Click here to save.">
+        </paper-toast>
     </template>
 
     <script>
@@ -247,7 +268,8 @@
                     loading: {
                         type: Object,
                         value: {
-                            getRecipe: false,
+                            get_recipe: false,
+                            put_item:   false,
                         },
                     },
                     // True whenever we're loading XHR data.
@@ -261,6 +283,7 @@
                         value: false,
                     },
                 },
+                observers: [ "check_change(recipe.*)" ],
                 ready: function() {
                 },
                 /* Loading is true if any flags in it are true. */
@@ -270,47 +293,106 @@
                         .forEach( v => ret = ret || this.loading[v] );
                     return ret;
                 },
-                loadRecipesPage: function() {
+                save_recipe: function() {
+                    this.$.put_item_ajax.generateRequest();
+                },
+                put_item_failed: function() {
+                    this.fire("iron-signal", {
+                        name: "error-toast",
+                        data: "Failed to save recipe :(",
+                    });
+                },
+                put_item_successful: function() {
+                    // load the response into new_recipe and copy it here to
+                    // prevent blanking the screen on a failed request.
+                    this.fire("iron-signal", {
+                        name: "success-toast",
+                        data: this.new_recipe.title + " saved",
+                    });
+                    this.set('recipe', this.new_recipe);
+                    // Make it back up the new copy.
+                    this.recipe_received();
+                    // Checking for change should automatically fire.
+                },
+                loading_recipe_failed: function() {
+                    this.fire("iron-signal", {
+                        name: "error-toast",
+                        data: "Failed to communicate with server :(",
+                    });
+                },
+                /* Make a copy of the recipe so we can tell whether it changed. */
+                recipe_received: function() {
+                    var o = JSON.parse(JSON.stringify(this.recipe));
+                    this.set('backup_recipe', o);
+                },
+                check_change: function() {
+                    if (!this.backup_recipe) return;
+                    var change = this.rdiff(this.backup_recipe, this.recipe);
+                    if (change) this.$.save_toast.open();
+                    else this.$.save_toast.close();
+                },
+                rdiff: function(a, b) {
+                    /* Because null and [] are objects. */
+                    if (a !== null && typeof a === "object") {
+                        /* If only a is an object they're different. */
+                        if (b === null || typeof b !== "object") return true;
+                        // Iterate over keys, making sure everything in a
+                        // exists in b. This stops recursing when we find a
+                        // difference.
+                        var diff = false;
+                        for (var e in a) {
+                            diff = diff || this.rdiff(a[e], b[e]);
+                        }
+                        // Now do the same for b in a.
+                        for (var e in b) {
+                            diff = diff || this.rdiff(a[e], b[e]);
+                        }
+                        return diff;
+                    }
+                    // Base case; a simple comparison between simple types.
+                    else return a !== b;
+                },
+                load_recipes_page: function() {
                     page.show('/');
                 },
-                toggleEditMode: function() {
+                toggle_edit_mode: function() {
                     this.editMode = !this.editMode;
                 },
-                addIngredient: function() {
+                add_ingredient: function() {
                     this.push("recipe.ingredients", new String());
                 },
-                addDirection: function() {
+                add_direction: function() {
                     this.push("recipe.directions", new String());
                 },
-                deleteIngredient: function(e) {
+                delete_ingredient: function(e) {
                     var index = Number(
                             e.currentTarget.attributes['data-index'].value);
                     this.splice('recipe.ingredients', index, 1);
                 },
-                deleteDirection: function(e) {
+                delete_direction: function(e) {
                     var index = Number(
                             e.currentTarget.attributes['data-index'].value);
                     this.splice('recipe.directions', index, 1);
                 },
-                moveIngredientUp: function(e) {
+                move_ingredient_up: function(e) {
                     var index = Number(
                             e.currentTarget.attributes['data-index'].value);
                     if (!index) return;
                     var temp = this.splice('recipe.ingredients', index, 1)[0];
                     this.splice('recipe.ingredients', index - 1, 0, temp);
                 },
-                moveDirectionUp: function(e) {
+                move_direction_up: function(e) {
                     var index = Number(
                             e.currentTarget.attributes['data-index'].value);
                     if (!index) return;
                     var temp = this.splice('recipe.directions', index, 1)[0];
                     this.splice('recipe.directions', index - 1, 0, temp);
                 },
-                formatRecipeTags: function(tags) {
+                format_recipe_tags: function(tags) {
                     if (!tags) return "";
                     return tags.join(", ");
                 },
-                addOne: function(val) {
+                add_one: function(val) {
                     return val + 1;
                 },
             });
