--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <paper-drawer-panel
                 id="paperDrawerPanel"
                 drawer-width="260px"
+                force-narrow
                 class="mainContentBackground"
                 responsive-width="1035px">
             <!-- The first header panel is for the drawer. -->
