--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -46,9 +46,10 @@
                 text-align: right;
             }
             .item-col {
-                 margin-left: 0.4em;
-                 margin-right: 0.4em;
+                 margin-left:   0.4em;
+                 margin-right:  0.4em;
                  margin-bottom: 0.2em;
+                 min-width:     20em;
             }
             td.td-label {
                 vertical-align: top;
