--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -21,9 +21,17 @@
                 url="/recipes/[[recipeId]]"
                 handle-as="json"
                 last-response="{{recipe}}"
-                on-error="loading_recipe_failed"
+                on-error="loading_data_failed"
                 on-response="recipe_received"
-                loading="{{loading.get_recipe}}">
+                loading="{{loading.get_item}}">
+        </iron-ajax>
+        <iron-ajax auto="[[recipeId]]"
+                method="GET"
+                url="/tags"
+                handle-as="json"
+                last-response="{{tags}}"
+                on-error="loading_data_failed"
+                loading="{{loading.get_tags}}">
         </iron-ajax>
         <iron-ajax method="PUT"
                 id="put_item_ajax"
@@ -44,15 +52,15 @@
             </paper-button>
             <paper-button raised on-tap="toggle_edit_mode">
                 <iron-icon icon="icons:create"></iron-icon>
-                <template is="dom-if" if="[[editMode]]">
+                <template is="dom-if" if="[[edit_mode]]">
                     Leave
                 </template>
-                <template is="dom-if" if="[[!editMode]]">
+                <template is="dom-if" if="[[!edit_mode]]">
                     Enter
                 </template>
                 Edit Mode
             </paper-button>
-            <paper-spinner class="nav-button" active="[[loadingData]]"
+            <paper-spinner class="nav-button" active="[[loading_data]]"
                     alt="loading recipes...">
             </paper-spinner>
         </div>
@@ -61,7 +69,7 @@
         <paper-material>
             <div class="card-item">
                 <!-- Form version. -->
-                <template is="dom-if" if="[[editMode]]">
+                <template is="dom-if" if="[[edit_mode]]">
                     <div class="layout horizontal wrap">
                         <div class="flex-4 item-col">
                             <paper-input type="text"
@@ -72,16 +80,60 @@
                                     label="Summary"
                                     value="{{recipe.summary}}">
                             </paper-textarea>
+                            <strong class="recipe-item-label">Tags</strong>
+                            <template is="dom-repeat" items="[[recipe.tags]]">
+                                <div class="layout horizontal center justified">
+                                    <span>[[item]]</span>
+                                    <paper-icon-button icon="icons:cancel"
+                                            data-index$="[[index]]"
+                                            on-tap="remove_tag">
+                                    </paper-icon-button>
+                                </div>
+                            </template>
+                            <!-- Select a new tag from a drop down. -->
+                            <div class="layout vertical">
+                                <paper-dropdown-menu label="Select New Tag"
+                                        vertical-align="top"
+                                        horizontal-align="right">
+                                    <paper-menu class="dropdown-content"
+                                            attr-for-selected="value"
+                                            selected="{{selected_tag}}"
+                                            on-iron-select="add_selected_tag">
+                                        <template is="dom-repeat"
+                                                items="[[tags]]">
+                                            <paper-item value="[[item]]">
+                                                [[item]]
+                                            </paper-item>
+                                        </template>
+                                    </paper-menu>
+                                </paper-dropdown-menu>
+                            </div>
+                            <!-- Type a new tag from typeahead. -->
+                            <datalist id="tags">
+                                <template is="dom-repeat" items="[[tags]]">
+                                    <option value="[[item]]"></option>
+                                </template>
+                            </datalist>
+                            <paper-input type="text"
+                                    label="Type New Tag"
+                                    value="{{typed_tag}}"
+                                    list="tags">
+                                    <paper-icon-button suffix
+                                            icon="icons:check-circle"
+                                            data-index$="[[index]]"
+                                            on-tap="add_typed_tag">
+                                    </paper-icon-button>
+                            </paper-input>
 
                             <!-- Ingredients inputs. -->
                             <strong class="recipe-item-label">
                                 Ingredients
                             </strong>
                             <template is="dom-repeat"
-                                    items="{{recipe.ingredients}}" as="i">
+                                    items="{{recipe.ingredients}}">
                                 <paper-input type="text"
                                         label="Item [[add_one(index)]]"
-                                        value="{{i}}">
+                                        value="{{item}}">
                                     <paper-icon-button suffix
                                             icon="icons:cancel"
                                             data-index$="[[index]]"
@@ -111,10 +163,10 @@
                                 Directions
                             </strong>
                             <template is="dom-repeat"
-                                    items="{{recipe.directions}}" as="d">
+                                    items="{{recipe.directions}}">
                                 <paper-textarea type="text"
                                         label="Step [[add_one(index)]]"
-                                        value="{{d}}">
+                                        value="{{item}}">
                                 </paper-textarea>
                                 <div class="layout horizontal end-justified">
                                     <paper-button
@@ -166,7 +218,7 @@
                 </template>
 
                 <!-- Display version. -->
-                <template is="dom-if" if="[[!editMode]]">
+                <template is="dom-if" if="[[!edit_mode]]">
                     <div class="layout horizontal end end-justified wrap">
                         <h3 class="card-title">[[recipe.title]]</h3>
                         <!--<div class="layout horizontal end-justified">-->
@@ -268,17 +320,18 @@
                     loading: {
                         type: Object,
                         value: {
-                            get_recipe: false,
-                            put_item:   false,
+                            get_item: false,
+                            put_item: false,
+                            get_tags: false,
                         },
                     },
                     // True whenever we're loading XHR data.
-                    loadingData: {
+                    loading_data: {
                         type: Boolean,
-                        computed: "computeLoadingData(loading.*)",
+                        computed: "compute_loading_data(loading.*)",
                     },
                     // Whether to show inputs or just display.
-                    editMode: {
+                    edit_mode: {
                         type: Boolean,
                         value: false,
                     },
@@ -287,7 +340,7 @@
                 ready: function() {
                 },
                 /* Loading is true if any flags in it are true. */
-                computeLoadingData: function(loading) {
+                compute_loading_data: function(loading) {
                     var ret = false;
                     Object.keys(this.loading)
                         .forEach( v => ret = ret || this.loading[v] );
@@ -321,7 +374,7 @@
                         data: (this.new_recipe.title || "Recipe") + " saved",
                     });
                 },
-                loading_recipe_failed: function() {
+                loading_data_failed: function() {
                     this.fire("iron-signal", {
                         name: "error-toast",
                         data: "Failed to communicate with server :(",
@@ -366,7 +419,7 @@
                     page.show('/');
                 },
                 toggle_edit_mode: function() {
-                    this.editMode = !this.editMode;
+                    this.edit_mode = !this.edit_mode;
                 },
                 add_ingredient: function() {
                     this.push("recipe.ingredients", new String());
@@ -398,9 +451,30 @@
                     var temp = this.splice('recipe.directions', index, 1)[0];
                     this.splice('recipe.directions', index - 1, 0, temp);
                 },
+                remove_tag: function(e) {
+                    var index = Number(
+                            e.currentTarget.attributes['data-index'].value);
+                    this.splice('recipe.tags', index, 1);
+                },
                 format_recipe_tags: function(tags) {
                     if (!tags) return "";
                     return tags.join(", ");
+                },
+                // Call add_tag with the appropriate variable.
+                add_selected_tag: function() {
+                    this.add_tag(this.selected_tag);
+                    //TODO this doesn't clear the menu
+                    this.set('selected_tag', null);
+                },
+                add_typed_tag: function() {
+                    this.add_tag(this.typed_tag);
+                    this.set('typed_tag', null);
+                },
+                // Add a tag to the tag list, checking for duplicates first.
+                add_tag: function(tag) {
+                    for (var i in this.recipe.tags)
+                        if (this.recipe.tags[i] === tag) return;
+                    this.push('recipe.tags', tag);
                 },
                 add_one: function(val) {
                     return val + 1;
