--- a/app/elements/global-behavior.html
+++ b/app/elements/global-behavior.html
@@ -31,6 +31,19 @@ recipe_behaviors.global_behavior = {
             value: constants,
         },
     },
+    // Handle clicks to load other pages. This is a hack needed due
+    // to limitation in the page.js router not handling new tab
+    // clicks properly.  See
+    // https://github.com/visionmedia/page.js/issues/276
+    load_recipe: function(e) {
+        e.stopPropagation();
+        // If this is a ctrl-click, do nothing; the browser will
+        // open it in a new tab.
+        if (e.detail.sourceEvent.ctrlKey) return;
+        // Otherwise, navigate there manually.
+        var index = e.currentTarget.attributes['data-id'].value;
+        page.show('/recipes/' + index);
+    },
     isUserAdmin: function(role) {
         return (role === this.constants.userRoleEnum.admin);
     },
