Fix bug in html that caused empty POST /recipes bodies

--- a/app/elements/item-collection.html
+++ b/app/elements/item-collection.html
@@ -96,7 +96,7 @@
             </template>
             <recipe-form id="create_recipe_form"
                     title="Create Recipe"
-                    lead-source="{{new_item}}"
+                    recipe="{{new_item}}"
                     on-closed="resolve_create_item">
             </recipe-form>
         </template>
